Aligns LayerSwitcher icon, fixes #200

--- a/src/stylesheets/app.scss
+++ b/src/stylesheets/app.scss
@@ -77,6 +77,7 @@ i[id^='icon_settings_tracker_'] {
   text-align: center;
 }
 
+.ol-control.ol-layerswitcher,
 .ol-control.ol-layerswitcher-popup {
   top: 0.5em;
 }
